# DeepCameraApp

./: AIWindow.qml  Buttons.qml  CMakeLists.txt  Emotion.qml  EmotionNewWindow.qml  FullScreenNewWindow.qml  Main.qml  MyLabel.qml  SettingsDelegate_Switch.qml  SettingsPage.qml  SourceWindow.qml  Stack.qml  Switcher.qml  Switcher2.qml  main.cpp  resources.qrc
